This file documents the revision history for UFL::Phonebook.

0.26
        - Redirect on single result only when a query is provided (for
          e.g. /units/*/people/)
        - Improve tokenizer and query builder for current state of
          names in LDAP

0.25  Mon May 19 11:50:33 EDT 2008
        - Make the proxy authentication control critical to avoid
          privacy leaks
        - Improve error message for failed kinit commands
        - Switch to dir7.osg.ufl.edu for LDAP queries to make SASL and
          thus proxy authentication work

0.24  Tue Apr 29 12:21:35 EDT 2008
        - Direct links to private pages now go to the right place
          instead of redirecting to the private home page (#3)
        - Fix poor URI construction for private instance (#2)
        - Configuration change: Controller::Authentication's
          authenticated_uri becomes authenticated_path_segments
        - Remove
          UFL::Phonebook::Plugin::Authentication::Store::AnyUser in
          favor of Catalyst::Authentication::Store::Null
        - Move authentication code to UFL::Controller::Authentication

0.23  Mon Dec  3 19:01:32 EST 2007
        - Refactor common searching and results code to
          ::BaseController
        - Disallow searches when SASL is configured but no Catalyst
          user is found
        - Rely more on $ENV{KRB5CCNAME} instead of trying to fake it
        - Update root/people/view.tt to reflect LDAP data moving
          around
        - Add homePostalAddress to list of inflations on ::Entry
        - Redirect to previous location on login

0.22  Fri Oct 19 12:51:11 EDT 2007
        - Say "Not Available" instead of "Unknown" for search results

0.21  Thu Oct 18 19:41:42 EDT 2007
        - Add a few missing (mostly core) modules to Makefile.PL
        - Add tests of LDAP ACLs
        - Improve handling of environment-based authentication for
          REMOTE_USER on mod_fastcgi