@@ -8,6 +8,107 @@ Controller::Authentication:
 
 Controller::People:
   default_query: Search UF People
+  filter_values:
+    - 99999628
+    - 38959780
+    - 82094510
+    - 05020700
+    - 27390580
+    - 65960260
+    - 58691040
+    - 94003680
+    - 63285700
+    - 00000421
+    - 00000841
+    - 09704400
+    - 89074910
+    - 00050800
+    - 76040020
+    - 10310510
+    - 38103040
+    - 80295000
+    - 05921400
+    - 62362600
+    - 13350790
+    - 46507080
+    - 13546500
+    - 39362850
+    - 29571270
+    - 37958170
+    - 44574920
+    - 12576120
+    - 81192020
+    - 34802120
+    - 96651510
+    - 96624480
+    - 09715830
+    - 82004610
+    - 37950200
+    - 14771570
+    - 28237520
+    - 00000542
+    - 00001083
+    - 00001261
+    - 46433900
+    - 77771940
+    - 41710730
+    - 98080110
+    - 63341480
+    - 57711710
+    - 75794440
+    - 01737240
+    - 76580900
+    - 01066000
+    - 39522500
+    - 92545490
+    - 14000090
+    - 45212730
+    - 57852860
+    - 68338820
+    - 56742270
+    - 49696370
+    - 24391100
+    - 17139970
+    - 59847780
+    - 80661980
+    - 89246750
+    - 47681850
+    - 84395070
+    - 30514170
+    - 32579840
+    - 87817740
+    - 52448400
+    - 15893020
+    - 35305780
+    - 78849580
+    - 92725150
+    - 89568050
+    - 18750570
+    - 91252870
+    - 93851520
+    - 56384820
+    - 81693420
+    - 04245620
+    - 01543370
+    - 95400570
+    - 46954830
+    - 02062630
+    - 47458310
+    - 73101870
+    - 02972720
+    - 75322020
+    - 13422320
+    - 55364620
+    - 32492680
+    - 35746990
+    - 46941190
+    - 67653250
+    - 67081870
+    - 15091770
+    - 89858900
+    - 33799528
+    - 44609180
+    - 72046480
 
 Controller::Search:
   default_source: phonebook
